# MOTION

./: .gitignore  CMakeLists.txt
circuits/benchmarks/: logreg.bristol  max.bristol
cmake/: BuildBoostLocally.cmake
src/: inputgen.py
src/examples/: CMakeLists.txt
src/examples/BitAND/: CMakeLists.txt
src/examples/BitAND/common/: BitAnd.cpp
src/examples/addition/: CMakeLists.txt  addition_main.cpp
src/examples/addition/common/: addition.cpp  addition.h
src/examples/aes128/common/: aes128.cpp
src/examples/benchmark_multiplication/: CMakeLists.txt  benchmark_multiplication_main.cpp
src/examples/benchmark_multiplication/common/: benchmark_multiplication.cpp
src/examples/comparison/: CMakeLists.txt  comparison_main.cpp
src/examples/comparison/common/: comparison.h
src/examples/example_template/: example_template_main.cpp
src/examples/multiplication/: CMakeLists.txt  multiplication_main.cpp
src/examples/multiplication/common/: multiplication.cpp  multiplication.h
src/examples/xor/: CMakeLists.txt
src/examples/xor/common/: xor.cpp  xor.h
src/motioncore/base/: party.h
src/motioncore/communication/fbs_headers/: garbled_circuit_message_generated.h  hello_message_generated.h  message_generated.h
src/motioncore/protocols/: share_wrapper.cpp
src/motioncore/utility/: config.h
src/thesis/: CMakeLists.txt  CMakeLists.txt~RF5ddee14.TMP
src/thesis/BitAND/: BitAnd_main.cpp
src/thesis/BitAND/common/: BitAnd.cpp  BitAnd.h
src/thesis/BitAnd/: BitAnd_main.cpp
src/thesis/BitAnd/common/: BitAnd.cpp  BitAnd.h
src/thesis/LeNet/: CMakeLists.txt  LeNet_main.cpp
src/thesis/LeNet/common/: LeNet.cpp
src/thesis/Reveal/: CMakeLists.txt  reveal_main.cpp
src/thesis/Reveal/common/: reveal.cpp
src/thesis/Share/: CMakeLists.txt  share_main.cpp
src/thesis/Share/common/: share.cpp
src/thesis/addition/: CMakeLists.txt  addition_main.cpp
src/thesis/addition/common/: addition.cpp  addition.h
src/thesis/aes128_thesis/: CMakeLists.txt  aes128_main.cpp
src/thesis/aes128_thesis/common/: aes128.cpp
src/thesis/auction/: CMakeLists.txt  auction_main.cpp
src/thesis/auction/common/: auction.cpp  auction.h  psi.cpp  psi.h
src/thesis/auction_hycc/: CMakeLists.txt  auction_h_main.cpp
src/thesis/auction_hycc/common/: auction.h  auction_h.cpp
src/thesis/comparison/: comparison_main.cpp
src/thesis/comparison/common/: comparison.cpp  comparison.h
src/thesis/division/: CMakeLists.txt  division_main.cpp
src/thesis/division/common/: .division.cpp.swp  division.cpp  division.cpp~RF5ddf9fb.TMP  division.h
src/thesis/fixedpt_division/: CMakeLists.txt  fixedpt_div_main.cpp
src/thesis/fixedpt_division/common/: fixedpt_div.cpp  fixedpt_div.h
src/thesis/logistic_regression/: logistic_regression_main.cpp
src/thesis/logistic_regression/common/: logistic_regression.cpp  logistic_regression.h
src/thesis/logreg_circuit/: CMakeLists.txt  logreg_main.cpp
src/thesis/logreg_circuit/common/: logreg.cpp  logreg.h
src/thesis/max/: CMakeLists.txt  max_main.cpp
src/thesis/max/common/: max.cpp  max.h
src/thesis/mean/: CMakeLists.txt  mean_main.cpp
src/thesis/mean/common/: mean.cpp  mean.h
src/thesis/min/: CMakeLists.txt  min_main.cpp  min_main.cpp~RF103befec.TMP
src/thesis/min/common/: min.cpp  min.h
src/thesis/multiplication/: CMakeLists.txt  multiplication_main.cpp
src/thesis/multiplication/common/: multiplication.cpp  multiplication.h
src/thesis/neuralinference/: CMakeLists.txt  neuralinference_main.cpp
src/thesis/neuralinference/common/: neuralinference.cpp
src/thesis/psi/: CMakeLists.txt  psi_main.cpp
src/thesis/psi/common/: psi.cpp  psi.h
src/thesis/share_conversion/: CMakeLists.txt  share_conversion_main.cpp
src/thesis/share_conversion/common/: share_conversion.cpp
src/thesis/statistics/: CMakeLists.txt  statistics_main.cpp
src/thesis/statistics/common/: statistics.cpp  statistics.h
src/thesis/xor/: bin.txt  xor_main.cpp
src/thesis/xor/common/: xor.cpp  xor.h
