add_subdirectory(multiplication)
add_subdirectory(comparison)
add_subdirectory(division)
add_subdirectory(BitAnd)
add_subdirectory(mean)
add_subdirectory(psi)
add_subdirectory(aes128_thesis)
add_subdirectory(fixedpt_division)
add_subdirectory(Share)
add_subdirectory(Reveal)
add_subdirectory(auction)
add_subdirectory(max)
add_subdirectory(min)
add_subdirectory(logreg_circuit)